--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFEB3B"
-    tools:context=".MainActivity" >
+    android:background="#FFFFFF"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -23,21 +23,21 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="106dp"
             android:layout_marginBottom="10dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:background="@drawable/inwiok" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="106dp"
             android:layout_marginBottom="10dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:background="@drawable/orangeok" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:layout_height="106dp"
+            android:background="@drawable/iamok" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
