--- a/app/src/main/res/layout/activity_my_scan.xml
+++ b/app/src/main/res/layout/activity_my_scan.xml
@@ -60,8 +60,12 @@
         android:id="@+id/switch3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
 
 
+        android:layout_marginTop="20dp"
+        android:button="@drawable/ic_flash_on_black_24dp"
         android:text="Flash" />
 
 </RelativeLayout>
